--- a/p-mm/p-mm-hummingbot-ku-pmm-ALGOUSDT-1.yaml
+++ b/p-mm/p-mm-hummingbot-ku-pmm-ALGOUSDT-1.yaml
@@ -11,7 +11,7 @@ metadata:
 data:
   quickstart.yml: |
     ########################################################
-    ###       Pure market making strategy config         ###
+    ###       Pure market making strategy configg         ###
     ########################################################
 
     template_version: 22
